Fix layout issue gallery pushing outside

--- a/components/imageGallery/ImageGallery.module.css
+++ b/components/imageGallery/ImageGallery.module.css
@@ -5,13 +5,11 @@
 }
 .galleryMainWrapper {
   position: relative;
-  width: 660px;
   max-width: 100%;
   max-height: 800px;
 }
 .galleryMainImageWrapper {
   position: relative;
-  width: 660px;
   max-width: 100%;
 }
 
